// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.config.edpaggregator;

import "google/api/resource.proto";
import "wfa/measurement/config/edpaggregator/storage_params.proto";
import "wfa/measurement/config/edpaggregator/transport_layer_security_params.proto";

option java_package = "org.wfanet.measurement.config.edpaggregator";
option java_multiple_files = true;
option java_outer_classname = "EventGroupSyncConfigProto";

// The Event Group config for a single EDP
message EventGroupSyncConfig {
  // Resource name referencing the `DataProvider` in an external system,
  // provided out-of-band.
  string data_provider = 1
      [(google.api.resource_reference).type = "halo.wfanet.org/DataProvider"];
  // The blob uri for the event groups stored in Mesos RecordIo
  string event_groups_blob_uri = 2;
  // The blob uri that contains MappedEventGroup(s) in Mesos RecordIO.
  string event_group_map_blob_uri = 3;
  // How the EDP connects to the CMMS Public API
  TransportLayerSecurityParams cmms_connection = 4;
  // Where the event groups are storage
  StorageParams event_group_storage = 5;
  // Where the event group map is stored
  StorageParams event_group_map_storage = 6;
}
