// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v1alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/any.proto";

option java_package = "org.wfanet.measurement.reporting.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "EventGroupProto";

// A grouping of events defined by a `DataProvider`. For example, a single
// campaign or creative defined in a publisher's ad system.
message EventGroup {
  option (google.api.resource) = {
    type: "reporting.halo-cmm.org/EventGroup"
    pattern: "measurementConsumers/{measurement_consumer}/dataProviders/{data_provider}/eventGroups/{event_group}"
  };

  // Resource name.
  string name = 1;

  // Resource name of the `DataProvider` associated with this `EventGroup`.
  string data_provider = 2 [
    (google.api.field_behavior) = IMMUTABLE,
    (google.api.resource_reference).type = "halo.wfanet.org/DataProvider"
  ];

  // ID referencing the `EventGroup` in an external system, provided by the
  // `DataProvider`.
  //
  // If set, this value must be unique among `EventGroup`s for the parent
  // `DataProvider`.
  string event_group_reference_id = 3;

  // The template that events associated with this `EventGroup` conform to.
  message EventTemplate {
    // The type of the Event Template. A fully-qualified protobuf message type.
    string type = 1 [(google.api.field_behavior) = REQUIRED];
  }
  // The `EventTemplate`s that events associated with this `EventGroup` conform
  // to.
  repeated EventTemplate event_templates = 4;

  // Wrapper for per-EDP Event Group metadata.
  message Metadata {
    // The resource name of the metadata descriptor.
    string event_group_metadata_descriptor = 1
        [(google.api.resource_reference).type =
             "halo.wfanet.org/EventGroupMetadataDescriptor"];

    // The serialized value of the metadata message.
    google.protobuf.Any metadata = 2;
  }

  Metadata metadata = 5;
}
